--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
   "env": {
     "SESSION_ID": {
       "description": "Put the session-id here.",
-      "required": true,
+      "required": true,SHABAN-MD~xxQkkBQL#gh9i9f_E8n4HZoRVr7CIKCMZr0NrdDMAEoXZkHtd0xw
       "value": ""
     },  
     
